--- a/task-manager-client/package.json
+++ b/task-manager-client/package.json
@@ -19,7 +19,9 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
+    "react-toastify": "^11.0.3",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.7"
   },
   "devDependencies": {
